<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="match">Match</string>
    <string name="team">Team</string>
    <string name="match_detail">Match Detail</string>
    <string name="search_match">Search Match</string>
    <string name="player_s">Player</string>
    <string name="player_detail">Player Detail</string>

    <string name="added_fav">Added to favorite</string>
    <string name="remove_fav">Remove to favorite</string>
    <string name="rem_fav">Remove to favorite</string>
    <string name="filled">Must be filled</string>

    <string name="fav_match">Favorite Match</string>
    <string name="fav_team">Favorite Team</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <array name="league_match">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
    </array>

    <string name="league_epl">English Premier League</string>
    <string name="league_elc">English League Championship</string>
    <string name="league_gb">German Bundesliga</string>
    <string name="league_isa">Italian Serie A</string>

    <string name="league_epl_api">4328</string>
    <string name="league_elc_api">4329</string>
    <string name="league_gb_api">4331</string>
    <string name="league_isa_api">4332</string>

    <string name="title_activity_team_detail">Team Detail</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>

    <string name="no_data">There is no data</string>
    <string name="past">Past Match</string>
    <string name="next">Next Match</string>
    <string name="title_activity_match_detail">MatchDetailActivity</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="lineup">Lineup</string>
    <string name="team_image_home">Team Image Home</string>
    <string name="team_image_away">Team Image Away</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="goals">Goals</string>
    <string name="search">Search…</string>
    <string name="search_original">Search</string>
    <string name="favorite">Favorite</string>
    <string name="view_player">View Player</string>
    <string name="team_logo">Team logo</string>
</resources>
