<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16dp"
    tools:context=".InitialActivity">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match"
            android:id="@+id/btn_match"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

        <Button
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team"
            android:id="@+id/btn_team"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

        <Button
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:id="@+id/btn_favorite"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</ScrollView>