<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/swipe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MatchDetailActivity"
    android:padding="@dimen/dimen_16dp"
    tools:showIn="@layout/activity_match_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_date"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:id="@+id/txt_score"
                    android:textSize="22sp"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_team1"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/team_image_home" />

                    <ImageView
                        android:id="@+id/img_team2"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/team_image_away" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_name1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/txt_name2"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_formation1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/txt_formation2"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_goal1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/goals"/>

                    <TextView
                        android:id="@+id/txt_goal2"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/txt_shots"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lineup"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_goalkeeper1"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/goalkeeper"/>

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_goalkeeper2"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_defense1"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/defense"/>

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_defense2"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_midfield1"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/midfield"/>

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_midfield2"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_forward1"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/forward"/>

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_forward2"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_substitutes1"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/substitutes"/>

                    <TextView
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_substitutes2"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:layout_gravity="center"
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>